tests/core/error/fts-rank-2.rq
SELECT (fts:rank(2) AS ?rank) { ?u fts:match "a" }
